# DotaLSTM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
GUI/: Window.cpp  Window.h  stylesheet.qss
model/: model.cpp  model.h  train.cpp
training/: data_scraping.py  training.ipynb
